Added translations and languages to database and api
